; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/can/peak_canfd/extr_peak_canfd.c_peak_canfd_set_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/can/peak_canfd/extr_peak_canfd.c_peak_canfd_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.peak_canfd_priv = type { i32 }

@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32)* @peak_canfd_set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @peak_canfd_set_mode(%struct.net_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.peak_canfd_priv*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.net_device*, %struct.net_device** %4, align 8
  %8 = call %struct.peak_canfd_priv* @netdev_priv(%struct.net_device* %7)
  store %struct.peak_canfd_priv* %8, %struct.peak_canfd_priv** %6, align 8
  %9 = load i32, i32* %5, align 4
  switch i32 %9, label %15 [
    i32 128, label %10
  ]

10:                                               ; preds = %2
  %11 = load %struct.peak_canfd_priv*, %struct.peak_canfd_priv** %6, align 8
  %12 = call i32 @peak_canfd_start(%struct.peak_canfd_priv* %11)
  %13 = load %struct.net_device*, %struct.net_device** %4, align 8
  %14 = call i32 @netif_wake_queue(%struct.net_device* %13)
  br label %18

15:                                               ; preds = %2
  %16 = load i32, i32* @EOPNOTSUPP, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %3, align 4
  br label %19

18:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %19

19:                                               ; preds = %18, %15
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local %struct.peak_canfd_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @peak_canfd_start(%struct.peak_canfd_priv*) #1

declare dso_local i32 @netif_wake_queue(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
